3rdparty changes:

Update December 12 2023
---------------------------------
* build.sh improvements
* Moved freetype to build_base
* Updated OpenColorIO
* Updated MaterialX python path
* Updated OpenImageIO python path
* Fixed USD

Update December 10 2023
---------------------------------
* Changed build_install_script build_install_check
* Updated Pyside2 to Pyside6
* Removed Pytools2
* Updated Python for OIIO, OCIO, USD and MaterialX

Update August 27 2023
---------------------------------
* Updated build configurations

Update July 17 2023
---------------------------------
* Updated build configurations
* Fixed incorrect use of eigen

Update June 6 2023
---------------------------------
* Added aces_container
* Added ceres-solver
* Added eigen
* Added glog
* Added rawtoaces

Update May 26 2023
---------------------------------
* Added lilbraw 0.21.1
* Fixed zlib pkgconfig

Update Jan 16 2023
---------------------------------
* Updated lcms2 to 2.14

Update Jan 5 2023
---------------------------------
* Python3 improvements

Update Jan 3 2023
---------------------------------
* Updated oiio with PR3735, arm64 fix
* Updated .gitignore
* Added additional notes to packages.txt

Update Jan 1 2023
---------------------------------
* Updated autoconf to 2.7.1
* Updated automake to 1.16.5
* Added Python2.7 to install instructions
* Added nasm for x86_64 AVX-512 support in x264
* Moved autotools to libs
* Fixed Imath lettercase typo
* Fixed USD lettercase typo
* Added cmake build dir to Imath and OpenEXR
* Updated oiio to master branch
* Updated licenses

Update Jun 5 2022
---------------------------------
* Updated harfbuzz to 4.3.0
* Fixed pybind tar.gz
* Fixed Makefile debug and release variant
* Updated install instructions
* Fixed jasper check
* Fixed openjpeg check
* Fixed materialx package, removed cmake_build
* Fixed opensubdiv package, removed cmake_build
* Added harfbuzz and pcre2 to base for Qt dependencies
* Added Amazon Buckets to platforms.txt
