@@ -47,9 +47,9 @@ build_qt() {
         echo "Path Qt: $qt_name"
         echo "Set Qt deployment target to: $major_version"
         # deployment target
-        sed -i '' "s/QMAKE_MACOSX_DEPLOYMENT_TARGET = 12/QMAKE_MACOSX_DEPLOYMENT_TARGET = $major_version/g" $qt_name/qtbase/mkspecs/common/macx.conf
+        #sed -i '' "s/QMAKE_MACOSX_DEPLOYMENT_TARGET = 12/QMAKE_MACOSX_DEPLOYMENT_TARGET = $major_version/g" $qt_name/qtbase/mkspecs/common/macx.conf
         # minimum version
-        sed -i '' "s/QT_MAC_SDK_VERSION_MIN = 11/QT_MAC_SDK_VERSION_MIN = $major_version/g" $qt_name/qtbase/mkspecs/common/macx.conf
+        #sed -i '' "s/QT_MAC_SDK_VERSION_MIN = 11/QT_MAC_SDK_VERSION_MIN = $major_version/g" $qt_name/qtbase/mkspecs/common/macx.conf
     fi
 }
 
@@ -74,6 +74,10 @@ build_3rdparty() {
     echo "Build 3rdparty base for type: $build_type"
     make verbose=1 build_base=1 $build_type &&
 
+    # path
+    export PATH=$PATH:"$script_dir/build/macosx/$machine_arch.$build_type/bin" &&
+
+    # build
     echo "Build Qt for type: $build_type"
     cd "qt/$qt_name" &&
 
@@ -90,17 +94,50 @@ build_3rdparty() {
         mkdir build.$build_type &&
         cd build.$build_type &&
 
-        # configure Qt with the appropriate options
+        qt_params=(
+            -DBUILD_qtactiveqt=OFF
+            -DBUILD_qtcharts=OFF
+            -DBUILD_qtcoap=OFF
+            -DBUILD_qtconnectivity=OFF
+            -DBUILD_qtdeclarative=OFF
+            -DBUILD_qtdoc=OFF
+            -DBUILD_qtgraphs=OFF
+            -DBUILD_qtharfbuzz=OFF
+            -DBUILD_qtlocation=OFF
+            -DBUILD_qtlottie=OFF
+            -DBUILD_qtmqtt=OFF
+            -DBUILD_qtmultimedia=OFF
+            -DBUILD_qtopcua=OFF
+            -DBUILD_qtquick3d=OFF
+            -DBUILD_qtquick3dphysics=OFF
+            -DBUILD_qtquicktimeline=OFF
+            -DBUILD_qtquickeffectmaker=OFF
+            -DBUILD_qtremoteobjects=OFF
+            -DBUILD_qtsensors=OFF
+            -DBUILD_qtserialbus=OFF
+            -DBUILD_qtspeech=OFF
+            -DBUILD_qtvirtualkeyboard=OFF
+            -DBUILD_qtwayland=OFF
+            -DBUILD_qtwebchannel=OFF
+            -DBUILD_qtwebengine=OFF
+            -DBUILD_qtwebview=OFF
+            -DQT_FEATURE_system_freetype=ON
+            -DQT_FEATURE_system_harfbuzz=ON
+            -DQT_FEATURE_system_zlib=ON
+            -DCMAKE_OSX_DEPLOYMENT_TARGET=$major_version
+            -DCMAKE_OSX_SYSROOT=/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk
+        )
+
         echo "Build Qt for type: $build_type"
-        ../configure -prefix "$script_dir/build/macosx/$machine_arch.$build_type" -libdir "$script_dir/build/macosx/$machine_arch.$build_type/lib" -opensource -confirm-license -system-libpng -system-libjpeg -system-zlib -system-pcre -system-harfbuzz -system-freetype -skip qtactiveqt -skip qtcharts -skip qtconnectivity -skip qtlocation -skip qtsensors -skip qtspeech -skip qtvirtualkeyboard -skip qtwayland -skip qtwebchannel -skip qtwebengine -skip qtwebview -I"$script_dir/build/macosx/$machine_arch.$build_type/include" -L"$script_dir/build/macosx/$machine_arch.$build_type/lib" $configure_options
+        cmake .. -DCMAKE_INSTALL_PREFIX="$script_dir/build/macosx/$machine_arch.$build_type" -DCMAKE_PREFIX_PATH="$script_dir/build/macosx/$machine_arch.$build_type" "${qt_params[@]}" -G"Ninja Multi-Config" && cmake --build . --parallel
     fi
 
-    # make install Qt
-    make install &&
+    # ninja install Qt
+    ninja install  &&
 
     # make extras
     echo "Build 3rdparty extras for type: $build_type"
-    cd "$script_dir" &&
+    cd "$script_dir"
     make verbose=1 build_libs=1 build_extras=1 $build_type
 }
 
@@ -116,5 +153,6 @@ if [ "$build_type" == "all" ]; then
     build_3rdparty "debug"
     build_3rdparty "release"
 else
+    build_clean
     build_3rdparty "$build_type"
 fi
